login github ok

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,5 +8,7 @@
     <input name="password" type="password" placeholder="password"><br>
     <button class="btn btn-primary" type="submit">Loguearme!</button>
   </form>
+
+  <p>Preferis identificarte con github ? Hace click <a href="/githublogin">aqui</a> </p>
   <script src="/static/js/login.js"></script>
 </div>
