--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 <h1>Tu perfil (sin datos sensibles)</h1>
-<p>Nombre: {{nombre}}</p>
-<p>Apellido: {{apellido}}</p>
-<p>Correo electronico: {{email}}</p>
+<p>Nombre: <span>{{nombre}}</span></p>
+<p>Apellido: <span>{{apellido}}</span></p>
+<p>Correo electronico: <span>{{email}}</span></p>
 
 <form>
   <button type="submit">Desloguearme!</button>
